--- a/src/Muzich/AdminBundle/Resources/views/base_admin_assetic_less.html.twig
+++ b/src/Muzich/AdminBundle/Resources/views/base_admin_assetic_less.html.twig
@@ -48,6 +48,8 @@
     <link rel="stylesheet" href="{{ asset('css/jquery-ui-1.10.1.autocomplete.min.css') }}" type="text/css" media="all" />
     <script type="text/javascript" src="{{ asset('js/jquery-ui-1.10.1.autocomplete.min.js') }}"></script>
     
+    <script type="text/javascript" src="{{ asset('js/admin.js') }}"></script>
+    
   </head>
 
   <body>
