--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
@@ -69,6 +69,11 @@
 {% endif %}
 
 <script type="text/javascript">
+  {% if app.user %}
+    visitor = false;
+  {% else %}
+    visitor = true;
+  {% endif %}
   string_follow_stop = "{{ 'user.stop_follow'|trans({}, 'users') }}";
   string_follow_following = "{{ 'user.following'|trans({}, 'users') }}";
   string_follow_follow = "{{ 'user.follow'|trans({}, 'users') }}";
