Evolution #414: Navigation en mode non inscrit
Ouverture ecran de login et inscriptionen ajax. Gestion du login en ajax.
TODO: Inscription en ajax.

--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
@@ -108,6 +108,7 @@
   string_removefromgroup_confirm_no = "{{ 'element.group.remove_from.confirm.no'|trans({}, 'elements') }}";
 
   url_index = "{{ path('index') }}";
+  url_home = "{{ path('home') }}";
   url_search_tag = "{{ path('search_tag') }}";
   url_get_favorites_tags = "{{ path('ajax_get_favorites_tags') }}";
   url_add_tag = "{{ path('ajax_add_tag') }}";
@@ -120,6 +121,8 @@
   url_element_get_stream_data = "{{ path('element_get_stream_data') }}";
   url_img_ajax_loader = "{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}";
   url_get_embed_for_element = "{{ path('url_get_embed_for_element') }}";
+  
+  url_subscription_or_login = "{{ path('subscribe_or_login') }}";
   
   config_player_youtube_width = "{{ player_config_youtube_width }}";
   config_player_youtube_height = "{{ player_config_youtube_height }}";
