--- a/src/Muzich/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/Security/login.html.twig
@@ -1,3 +1,10 @@
+{% if error is not defined %}
+  {% set error = null %}
+{% endif %}
+{% if last_username is not defined %}
+  {% set last_username = null %}
+{% endif %}
+
 <div class="login">
   {% if error %}
       <ul class="error_list"><li>{{ error|trans({}, 'validators') }}</li></ul>
