Evolution #414: Navigation en mode non inscrit
+ Finalisation avec la prise en charge ajax dur formulaire d'inscription en ajax.
+ Boutons pour passer de l'inscription a l'identification sur le popin registration_or_login

--- a/src/Muzich/UserBundle/Resources/views/Account/subscribe_or_login.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/Account/subscribe_or_login.html.twig
@@ -1,3 +1,13 @@
+
+<a href="#" id="registration_link" class="button gradient" style="display: none;">
+  {{ 'registration.display'|trans({}, 'navigationui') }}
+  <img src="{{ asset('/img/icon_dart_right_white.png') }}" alt="" />
+</a>
+<a href="#" id="login_link" class="button gradient" style="display: none;">
+  {{ 'login.display'|trans({}, 'navigationui') }}
+  <img src="{{ asset('/img/icon_dart_left_white.png') }}" alt="" />
+</a>
+
 <div id="login_box" style="display: none;">
   
   {% include "MuzichUserBundle:Security:login.html.twig" %}
