bug fix: Il n'atait pas effectué de test de dulicité sur l'email lors de l'insciption ... :/

--- a/src/Muzich/UserBundle/Resources/views/Info/bar.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/Info/bar.html.twig
@@ -15,7 +15,9 @@
 <ul class="user_events_infos">
 
   <li class="user_name">
-    {{ app.user.name }}
+    <a href="{{ path('my_account') }}">
+      {{ app.user.name }}
+    </a>
   </li>
 
   <li class="user_messages">
