Evolution #582: Implémenter le mode nopass Le pseudo en haut a droite est cliquable et le renvois sur une page/formulaire lui permettant de changer son pseudonyme. (l'utilisateur ne peux le faire q'une fois)

--- a/src/Muzich/CoreBundle/Resources/public/css/main.css
+++ b/src/Muzich/CoreBundle/Resources/public/css/main.css
@@ -2056,3 +2056,12 @@ p.accept_cgu
 {
   font-size: 11px;
 }
+
+li.user_name a
+{
+  color: inherit;
+}
+
+li.user_name a:hover
+{
+text-decoration: underline;
