--- a/src/Muzich/UserBundle/Resources/views/Security/change_password_form.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/Security/change_password_form.html.twig
@@ -11,21 +11,15 @@
 {% endif %}
     
   <div class="field">
-    {{ form_errors(form.current_password) }}
-    {{ form_label(form.current_password, 'password.actual'|trans({}, 'userform')) }}
-    {{ form_widget(form.current_password, {'attr':{'class':'niceinput'}}) }}
+    {{ form_errors(form.plain_password.first) }}
+    {{ form_label(form.plain_password.first, 'password.new.first'|trans({}, 'userform')) }}
+    {{ form_widget(form.plain_password.first, {'attr':{'class':'niceinput'}}) }}
   </div>
 
   <div class="field">
-    {{ form_errors(form.new.first) }}
-    {{ form_label(form.new.first, 'password.new.first'|trans({}, 'userform')) }}
-    {{ form_widget(form.new.first, {'attr':{'class':'niceinput'}}) }}
-  </div>
-
-  <div class="field">
-    {{ form_errors(form.new.second) }}
-    {{ form_label(form.new.second, 'password.new.second'|trans({}, 'userform')) }}
-    {{ form_widget(form.new.second, {'attr':{'class':'niceinput'}}) }}
+    {{ form_errors(form.plain_password.second) }}
+    {{ form_label(form.plain_password.second, 'password.new.second'|trans({}, 'userform')) }}
+    {{ form_widget(form.plain_password.second, {'attr':{'class':'niceinput'}}) }}
   </div>
 
 {{ form_rest(form) }}
